# MicroProccessorApplications

BareMetal Drivers/: main.c
BegalBoneUART/: main.c  threads.c  threads.h
BegalBoneUART/BegalSocketConnection/: Client.py  UART.py
BootLoader Lab/bootloader/bootloader/: Makefile
Driver Lab/_level (1)/_level/: CMakeLists.txt  level.uf2
Emmbedded Rust/feather-rp2040-rs-Anim/feather-rp2040-rs-Anim/: Cargo.toml  README.md
Emmbedded Rust/feather-rp2040-rs-Anim/feather-rp2040-rs-Anim/src/: animations.rs  main.rs  usb_manager.rs
RTOS Test/VisualApplication/: main.c  threads.c  threads.h
RTOS Test/WithDrivers/: main.c  threads.c
RTOSProject/: .cproject  .project  GFX_Library.c  main.c  threads.c  threads.h
RTOSProject/.launches/: Lab3-Rebooted.launch  Lab4.launch  LabQuiz1.launch
RTOSProject/Debug/: GFX_Library.d  Lab3-Rebooted.map  Lab3-Rebooted.out  Lab3-Rebooted_linkInfo.xml  Lab4.map  Lab4.out  Lab4_linkInfo.xml  LabQuiz1.map  LabQuiz1.out  LabQuiz1_linkInfo.xml  ccsObjs.opt  main.d  makefile  sources.mk  subdir_rules.mk  subdir_vars.mk  threads.d  uartstdio.d
RTOSProject/Debug/driverlib/: adc.d  aes.d  can.d  comp.d  cpu.d  crc.d  des.d  eeprom.d  emac.d  epi.d  flash.d  fpu.d  gpio.d  hibernate.d  i2c.d  interrupt.d  lcd.d  mpu.d  onewire.d  pwm.d  qei.d  shamd5.d  ssi.d  subdir_rules.mk  sw_crc.d  sysctl.d  sysexc.d  systick.d  timer.d  uart.d  uartstdio.d  udma.d  usb.d  watchdog.d
RTOSProject/G8RTOS/: G8RTOS_Scheduler.h
RTOSProject/MultimodDrivers/: multimod.h  multimod_uart.h
Vocie Recognition/: main.c  threads.c  threads.h
(+35 files in other folders)
